--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-matplotlib==3.5.2
-numpy==1.22.3
-pandas==1.4.2
-scikit_learn==1.1.2
+matplotlib==3.7.2
+numpy==1.25.2
+pandas==2.0.3
+plotly==5.16.1
+scikit_learn==1.3.0
+streamlit==1.26.0
